wordpress/sites/wptest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-wptest
  namespace: wordpress
  labels:
    ocf.berkeley.edu/wordpress: wptest
spec:
  replicas: 1
  selector:
    matchLabels:
      ocf.berkeley.edu/wordpress: wptest
  template:
    metadata:
      labels:
        ocf.berkeley.edu/wordpress: wptest
    spec:
      containers:
        - name: wordpress-core
          image: ghcr.io/ocf/ocf-wordpress-core:latest
          volumeMounts:
          - mountPath: /tmp
            name: tmp
          - mountPath: /share/wordpress/wp-content/uploads
            name: uploads
            subPath: wp-test
          ports:
          - containerPort: 443
      securityContext:
        fsGroup: 65534
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads
      - name: tmp
        emptyDir: 
          sizeLimit: 500Mi
