wordpress/sites/wptest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-wptest
  namespace: wordpress
spec:
  ports:
  - port: 80
    targetPort: 443
  selector:
    ocf.berkeley.edu/wordpress: wptest
