wordpress/sites/wptest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-wptest
  namespace: wordpress
spec:
  rules:
  - host: wptest.wp.ocfhosted.com
    http:
      paths:
      - backend:
          service:
            name: wp-wptest
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - wptest.wp.ocfhosted.com
    secretName: wp-wptest-tls
